fixed image aligning

--- a/style.css
+++ b/style.css
@@ -73,6 +73,7 @@ body{
     flex-direction: column;
     background-color:	#633b3b;
     justify-content: center;
+    align-items: center;
 }
 .shelf{
     z-index: 2;
@@ -82,4 +83,18 @@ body{
     flex-direction: row;
     background-color:	#924233;
     justify-content: center;
+    align-items: center;
+
+}
+.productContainer{
+    
+    display : flex;
+    justify-content: center;
+    align-items : center;
+    width : 200px ;
+    height : 200px ;
+}
+.productContainer img{
+    max-width: 50%;
+    max-height: 50%;
 }
